[package]
name = "heimstad"
version = "0.1.5"
edition = "2021"
description = "A kiss Smarthome Daemon for your mqtt broker."
authors = ["RincewindWizzard <git@magierdinge.de>"]
license = "LGPL-2"

[package.metadata.deb]


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
log = "0.4.21"
stderrlog = "0.6.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
time = "0.3.36"
rumqttc = "0.24.0"
async-trait = "0.1.80"
futures = "0.3.30"
anyhow = "1.0.86"
chrono = "0.4.38"
